--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-elements": "^3.4.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^5.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
