--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-elements": "^3.4.2",
+    "react-native-image-picker": "^4.10.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.1.0",
     "react-native-safe-area-context": "^4.4.1",
